Create new fetchByResourceID endpoint
